fix(cto): Fix some typos after proof reading

--- a/chief-technical-officer/main.tex
+++ b/chief-technical-officer/main.tex
@@ -69,11 +69,11 @@ Bagage Technique
 En 4 ans chez i-Run.fr j’ai eu l’opportunité d’évoluer sur trois niveaux d’encadrement d’équipes et ainsi d’affiner mes \textbf{compétences en management et mon leadership}.
 \begin{description}[leftmargin=0cm]
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
-    La société me confie l’ensemble des équipes du service informatique, composé alors de \textbf{4~équipes et de 20 personnes} réparties en développeurs, consultants fonctionnels, administrateurs système et data scientists. Ma mission première a été de structurer les équipes afin de faciliter et fluidifier les communications entre elles. En lien direct avec la direction générale de la société, j’\textbf{élabore la stratégie informatique} pour l’ensemble des sites commerciaux de l’entreprise ainsi que pour le backoffice développé en interne. Je \textbf{prends les décisions adaptées} à la stratégie de la société \textbf{en pleine autonomie et supervise les équipes} du service dans la réalisation des projets.\\
+    La société me confie l’ensemble des équipes du service informatique, composé alors de \textbf{4~équipes et de 20 personnes} réparties en développeurs, consultants fonctionnels, administrateurs système et data scientist. Ma mission première a été de structurer les équipes afin de faciliter et fluidifier les communications entre elles. En lien direct avec la direction générale de la société, j’\textbf{élabore la stratégie informatique} pour l’ensemble des sites commerciaux de l’entreprise ainsi que pour le backoffice développé en interne. Je \textbf{prends les décisions adaptées} à la stratégie de la société \textbf{en pleine autonomie et supervise les équipes} du service dans la réalisation des projets.\\
     J’ai à c\oe{ur} de transmettre à mes équipes des valeurs de \textbf{bienveillance et de coopération} qui ont amené le service à la \textbf{réalisation de projets majeurs} comme le déplacement de notre production de Paris à Toulouse, la restructuration de tout notre réseau informatique logistique ou l’expansion de la société en Allemagne.
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
-    La société me fait confiance et me promeut au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. Je \textbf{supervise l’ensemble des choix techniques}. J’organise le fonctionnement de l’équipe via des rituels agiles sur une base Kanban. Je fais le \textbf{lien avec les équipes} fonctionnelle et système afin de coordonner au mieux les efforts de chacun. De plus, \textbf{je recrute de nouveaux développeurs} nécessaires au renforcement de l’équipe.
-    \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018} \\
+    La société me fait confiance et me nomme au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. Je \textbf{supervise l’ensemble des choix techniques}. J’organise le fonctionnement de l’équipe via des rituels agiles sur une base Kanban. Je fais le \textbf{lien avec les équipes} "fonctionnel" et "système" afin de coordonner au mieux les efforts de chacun. De plus, \textbf{je recrute de nouveaux développeurs} nécessaires au renforcement de l’équipe.
+    \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018}\\
     Arrivé dans une équipe alors composée de 5 développeurs, mes premières missions sont, avec l’aide du Lead Frontend, de proposer \textbf{une stratégie et une architecture logicielle cohérente}. La mise en place de \textbf{process} et de \textbf{bonnes pratiques} permet à l’équipe de réduire les régressions. J’établis également des \textbf{plans de formations} qui amènent l’équipe à progresser et à envisager plus sereinement les changements à venir.
 \end{description}
 \
@@ -167,7 +167,7 @@ En tant qu’unique ressource technique d’une équipe de 7 personnes, j’effe
 		{Nombreux projets pilotés ou supervisés sur l’ensemble des équipes chez i-Run.fr}
     \capability {Recrutement}
 		{}
-		{Chargé des recrutements informatique chez i-Run.fr, pour faire passer l’équipe de 6 à 20 personnes}
+		{Chargé des recrutements informatiques chez i-Run.fr, pour faire passer l’équipe de 6 à 20 personnes}
     \capability {Pédagogie}
         {}
         {Formations à l’équipe de développement chez i-Run.fr et animations d’ateliers hebdomadaires de partage de connaissances}
