--- a/java-tech-leader/cv-tech-lead-fred-combes.tex
+++ b/java-tech-leader/cv-tech-lead-fred-combes.tex
@@ -31,13 +31,19 @@
 
 \begin{document}
 
-\header{frédéric}{|}{combes}{java tech leader}
+\headernamefirst{frédéric}{|}{combes}{java technical leader}
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{aside} % In the aside, each new line forces a line break
+\section{compétences}
+Java 11, Spring Boot,
+Maven, Git, Docker,
+MySQL, Mongo,
+Agile, Scrum,
+Linux
 \section{contact}
 \myAddress
 ~
@@ -45,12 +51,6 @@
 \myReferences
 \section{langues}
 \myLanguages
-\section{compétences}
-Agile, Scrum
-Java 8, Spring,
-Maven, Git, Docker
-Oracle, MySQL, Neo4j
-Linux
 \end{aside}
 
 %----------------------------------------------------------------------------------------
@@ -62,49 +62,50 @@ Linux
 %---- I-RUN.FR --------------------------------------------------------------------
 \entry
 {Depuis 2018}
-{I-Run.fr}
+{Technical Leader Backend}
 {Toulouse, Launaguet}
-{\vspace{0.2cm}\emph{Technical Leader Backend} \discretright{/ Agile, Spring, Java 8, Maven, Docker /}\\
-Responsable d’une équipe de 3 à 6 personnes, je suis en charge de trouver des solutions aux problématiques de développement 
-et de maintenance des projets I-Run.fr.
+{\vspace{-0.4cm}\emph{i-Run.fr} \markedright{/ Spring Boot, Java 11, Vue.js, Docker, Linux, MySQL, Agile /}\\
+\begin{description}[leftmargin=0cm]
+    \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
+    Je supervise alors l’équipe \textbf{d’administrateurs système} en plus des équipes de développement. Je participe aux développements \textbf{Java 11},valide \textbf{l’architecte logicielle} du projet de refonte et organise la mise en place du monitoring des applications grâce à \textbf{Prometheus et Grafana}. Le remplacement de machines de production par des \textbf{VM sous Proxmox} et la segmentation du \textbf{réseau en VLANs}, ont permis de sécuriser la production et de préparer l’infrastructure pour les nouvelles applications. 
 
-Composées de plusieurs front office et d’un back office, les applications I-Run souffrent d’un fort legacy. 
-Avec l’aide de mon homologue front, je suis en charge de repenser l’architecture des applications et d’accompagner les 
-développeurs dans la transition entre l’ancienne architecture et la nouvelle.
+    \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
+    J’ai initié et porté le projet de refonte et ré-architecture logicielle des applications. J’ai formé les équipes à \textbf{Java 11, Reactor et Spring Weblux} pour développer de nouveaux composants. J’ai porté les concepts d’\textbf{architecture hexagonale} auprès des équipes de développement. J’ai de plus développé des outils à base de \textbf{Docker, d’ansible ou de bash} pour faciliter les développements.
 
-En parallèle de ce projet de refactor, je suis en charge de maintenir la cohérence du code par des revues régulières 
-et le suivi des développements et de mises en production efectuées toutes les semaines.
-\\}
+    \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018}\\
+    Ma première tache fut de sécuriser le système de déploiement. J’ai \textbf{uniformisé et automatisé les builds} de tous les projets et développé un CI dans gitlab qui permet aujourd’hui de déployer l'ensemble des applications en un click. En parallèle, je participe aux développements et à la maintenance des applications \textbf{Java 8}. 
+\end{description}
+\
+}
 
 %---- LIVING OBJECTS --------------------------------------------------------------------
 \entry
 {2014 \ding{224} 2017}
-{Living Objects}
+{Expert développement Java}
 {Toulouse, Basso Cambo}
-{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Agile, Scrum, Java 8, Maven, Docker /}\\
-Au sein du département Recherche \& Développement de Living Objects, composé d’une quinzaine de développeurs,
-réparti entre frontend et backend, je participe au développement de "eye.LO". Le produit principal de la société. Développé
-en Java 8, sur un framework OSGi avec une architecture micro-service REST.\\
-
-L’autonomie laissée à l’équipe de développement me permet de mettre à profit mon expérience et ma capacité à prendre du recul afin de proposer des choix techniques et des solutions appropriés aux difficultés rencontrées.
-\\}
-
+{\vspace{-0.4cm}\emph{Expert développement Java} \markedright{/ Java 8, Neo4j, Maven, Docker, Scrum /}\\
+\begin{enumerate}[leftmargin=-1cm]
+    \item Membre d’une équipe d’une \textbf{quinzaine de développeurs}, je travaille sur le produit principal de la société.
+    \item Je participe à l’élaboration de l’\textbf{architecture micro-service REST} du produit.
+    \item Je développe un composant logiciel en \textbf{Java 8}, sur un \textbf{framework OSGi} pour le serveur REST. 
+        Le stockage utilise une \textbf{base de données Neo4j} pour représenter les connexions entre les routeurs du réseau mobile SFR.
+\end{enumerate}
+\
+}
+\end{entrylist}
+\begin{entrylist}
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
 \entry
 {2007 \ding{224} 2013}
-{Cameleon Software}
+{Consultant Technique Expert}
 {Toulouse, Labège}
-{\vspace{0.2cm}\emph{Consultant Technique Expert} \discretright{/ Java J2EE, Struts, Jenkins /}\\
-Référent Technique au sein de l’équipe "CEO Services" composée de neuf personnes, mes attributions sont les suivantes :
-
-\begin{enumerate}
-\item Développement de composants d’interface sur les nouveaux produits. Pour des sociétés comme la MNT pour qui j’ai implémenté des composants de leur offre en ligne grâce à ma maîtrise des technologies web 2.0.
-\item Réalisation d’intégration entre nos produits et des CRM tel que Selligent pour des clients comme Gras Savoye grâce à mes compétences en Web Services.
-\item Réalisation de PoC, pour des clients comme AXA, MMA, SAGE ou encore La Poste. Mon sens du relationnel et l’esprit d’équipe nécessaires pour de telles réalisations, m’ont permis de présenter des concepts aboutis à des clients convaincus.
-\item Missions à l’étranger pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal Rock pour qui j'ai développé des interfaces avancées de configuration de produit.
+{\vspace{-0.4cm}\emph{Cameleon Software} \markedright{/ Java J2EE, Struts, Jenkins, VMWare, Oracle /}\\
+\begin{enumerate}[leftmargin=-1cm]
+\item Intégré comme expert dans des \textbf{équipes de 10 à 20 personnes}, je développe des \textbf{composants d’interface responsive en JSP} et je forme les équipes à l’intégration de solution e-Commerce pour de grosses compagnies d’assurance comme MNT ou MMA.
+\item Réalisation de PoC techniques, pour des clients comme AXA, MMA, SAGE ou encore La Poste.
+\item \textbf{Missions à l’étranger} pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal.
+\item Mise en place et maintenance de \textbf{l’intégration continue} au sein de l’équipe technique de Caméléon (déploiement d’un serveur Git, VMWare et Jenkins).
 \end{enumerate}
-
-De plus mes initiatives ont permis de mettre en place ou d’améliorer les processus de développement et de test au sein de l’équipe technique (Serveur VMWare, intégration continue avec Jenkins, passage de SubVersion à Git, \ldots).
 \
 }
 \end{entrylist}
@@ -112,9 +113,9 @@ De plus mes initiatives ont permis de mettre en place ou d’améliorer les proc
 %---- ACCESS COMMERCE --------------------------------------------------------------------
 \entry
 {2001 \ding{224} 2007}
-{Access-Commerce}
+{Développeur d'adaptations}
 {Toulouse, Labège}
-{\vspace{0.2cm}\emph{Développeur d'adaptations}  \discretright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
+{\vspace{0.2cm}\emph{Access-Commerce}  \markedright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
 Centre de compétences ERP chez Access-Commerce à Toulouse Labège.
 En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai, entre autres, effectué les
 missions suivantes :
@@ -172,7 +173,7 @@ missions suivantes :
 		{Lu, écrit et parlé}
 		{Utilisé lors de mes déplacements aux USA et durant les réunions de cadrage avec les clients
 		étrangers.}
-	\capability {Java 8 / Maven}
+	\capability {Java 11 / Maven}
 		{Expert}
 		{Langage de programmation principal des applications éditées par Caméléon Software, Living Objects \& I-Run.fr}
 	\capability {Spring / Spring boot}
@@ -184,9 +185,6 @@ missions suivantes :
 	\capability {Agile, Scrum}
 		{Maîtrise}
 		{Méthodologie utilisée avec souplesse chez Living Objects afin de s’organiser sur le projet EYE.lo}
-	\capability {Subversion, Git}
-		{Maîtrise}
-		{Outils de gestion de source utilisé par Cameleon Software \& Living Objects}
 	\capability {Oracle, MySQL}
 		{Expert}
 		{Certification OCA 10g, MySQL est la base de données utilisé chez Living Objects}
@@ -205,6 +203,6 @@ Détenteur d’un \textbf{permis B}
 
 \textbf{professionnel:} travail en équipe, challenges techniques, algorithmique, TDD
 
-\textbf{personnel:} Membre du bureau de l’association sportive VLAM. Et, depuis 3 ans, capitaine de l’équipe Mixte du club.
+\textbf{personnel:} Membre du bureau de l’association sportive de Volley de Montaudran, VLAM.
 
 \end{document}
