--- a/common/personal-infos.tex
+++ b/common/personal-infos.tex
@@ -1,19 +1,20 @@
 \newcommand*{\myAddress}{
-APT 6\\
-282 Avenue Antoine-de-Saint-Exupéry\\
-31400 TOULOUSE\\
+Résidence Les Jardins de Marivaux\\
+20 Rue des Neuf Soleils\\
+63000 Clermont-Ferrand\\
 France
 }
 
-\newcommand*{\myPhoneNumber}{+33 (0)6 31 97 71 06}
+\newcommand*{\myPhoneNumber}{+33 7 69 08 64 25}
 
 \newcommand*{\myLanguages}{
 français \textit{maternelle}\\
-anglais \textit{lu, écrit, parlé}
+anglais \textit{B2}
+allemand \textit{A1}
+catalan \textit{A1}
 }
 
 \newcommand*{\myReferences}{
-\href{mailto:marthym@gmail.com}{marthym@gmail.com}
-\href{https://github.com/Marthym}{github.com/Marthym}
-\href{https://www.linkedin.com/in/combesfrederic}{in/combesfrederic}
+\href{mailto:cedric@martinez.lt}{cedric@martinez.lt}
+\href{https://www.linkedin.com/in/martinezcce}{in/martinezcce}
 }
