--- a/IT-Consultant/CV-IT-Consultant-CedricMartinez.tex
+++ b/IT-Consultant/CV-IT-Consultant-CedricMartinez.tex
@@ -1,1 +1,195 @@
-ddd
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Cédric Martinez/CV
+% XeLaTeX Template
+% Version 1.0 (2023-09-06)
+%
+% This template has been downloaded from:
+% http://www.LaTeXTemplates.com
+%
+% Original author:
+% Adrien Friggeri (adrien@friggeri.net)
+% https://github.com/afriggeri/CV
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
+% Important notes:
+% This template needs to be compiled with XeLaTeX and the bibliography, if used,
+% needs to be compiled with biber rather than bibtex.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\documentclass{friggeri-cv} 	% Add 'print' as an option into the square bracket to remove colors from this template for printing
+
+\usepackage[french]{babel}
+\frenchbsetup{StandardItemLabels}
+
+\usepackage{csquotes}
+
+\hypersetup{pdfborder={0 0 0},colorlinks}
+\input{common/personal-infos}
+
+\begin{document}
+
+\headernamefirst{Cédric}{|}{Martinez}{Administrateur Système}
+
+%----------------------------------------------------------------------------------------
+%	SIDEBAR SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{aside} % In the aside, each new line forces a line break
+\section{compétences}
+Windows Server, GNU/Linux,
+Fortinet, Stormshield, Palo Alto,
+Dell VXRail, HPE Simplivity, Docker,
+MySQL, Postgresql,
+Agile, Scrum,
+\section{contact}
+\myAddress
+~
+\myPhoneNumber
+\myReferences
+\section{langues}
+\myLanguages
+\end{aside}
+
+%----------------------------------------------------------------------------------------
+%	SECTION: 'Expérience Professionnelle'
+%----------------------------------------------------------------------------------------
+\section{Expériences Professionnelles}
+
+\begin{entrylist}
+%---- I-RUN.FR --------------------------------------------------------------------
+\entry
+{Depuis 2018}
+{Technical Leader Backend}
+{Toulouse, Launaguet}
+{\vspace{-0.4cm}\emph{i-Run.fr} \markedright{/ Spring Boot, Java 11, Vue.js, Docker, Linux, MySQL, Agile /}\\
+\begin{description}[leftmargin=0cm]
+    \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
+    Je supervise alors l’équipe \textbf{d’administrateurs système} en plus des équipes de développement. Je participe aux développements \textbf{Java 11},valide \textbf{l’architecte logicielle} du projet de refonte et organise la mise en place du monitoring des applications grâce à \textbf{Prometheus et Grafana}. Le remplacement de machines de production par des \textbf{VM sous Proxmox} et la segmentation du \textbf{réseau en VLANs}, ont permis de sécuriser la production et de préparer l’infrastructure pour les nouvelles applications. 
+
+    \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
+    J’ai initié et porté le projet de refonte et ré-architecture logicielle des applications. J’ai formé les équipes à \textbf{Java 11, Reactor et Spring Weblux} pour développer de nouveaux composants. J’ai porté les concepts d’\textbf{architecture hexagonale} auprès des équipes de développement. J’ai de plus développé des outils à base de \textbf{Docker, d’ansible ou de bash} pour faciliter les développements.
+
+    \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018}\\
+    Ma première tache fut de sécuriser le système de déploiement. J’ai \textbf{uniformisé et automatisé les builds} de tous les projets et développé un CI dans gitlab qui permet aujourd’hui de déployer l'ensemble des applications en un click. En parallèle, je participe aux développements et à la maintenance des applications \textbf{Java 8}. 
+\end{description}
+\
+}
+
+%---- ABICOM --------------------------------------------------------------------
+\entry
+{Depuis 2020}
+{Consultant en Infrastructure}
+{Aubière, France}
+{\vspace{-0.4cm}\emph{ABICOM} \markedright{/ Java 8, Neo4j, Maven, Docker, Scrum /}\\
+\begin{enumerate}[leftmargin=-1cm]
+    \item Membre d’une équipe d’une \textbf{quinzaine de développeurs}, je travaille sur le produit principal de la société.
+    \item Je participe à l’élaboration de l’\textbf{architecture micro-service REST} du produit.
+    \item Je développe un composant logiciel en \textbf{Java 8}, sur un \textbf{framework OSGi} pour le serveur REST. 
+        Le stockage utilise une \textbf{base de données Neo4j} pour représenter les connexions entre les routeurs du réseau mobile SFR.
+\end{enumerate}
+\
+}
+\end{entrylist}
+\begin{entrylist}
+%---- Aubep SA -----------------------------------------------------------------
+\entry
+{2007 \ding{224} 2013}
+{IT Technician}
+{Yverdon-les-bains, Suisse}
+{\vspace{-0.4cm}\emph{Aubep SA} \markedright{/ Java J2EE, Struts, Jenkins, VMWare, Oracle /}\\
+\begin{enumerate}[leftmargin=-1cm]
+\item Intégré comme expert dans des \textbf{équipes de 10 à 20 personnes}, je développe des \textbf{composants d’interface responsive en JSP} et je forme les équipes à l’intégration de solution e-Commerce pour de grosses compagnies d’assurance comme MNT ou MMA.
+\item Réalisation de PoC techniques, pour des clients comme AXA, MMA, SAGE ou encore La Poste.
+\item \textbf{Missions à l’étranger} pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal.
+\item Mise en place et maintenance de \textbf{l’intégration continue} au sein de l’équipe technique de Caméléon (déploiement d’un serveur Git, VMWare et Jenkins).
+\end{enumerate}
+\
+}
+\end{entrylist}
+\begin{entrylist}
+%---- HP CDS CACIB --------------------------------------------------------------------
+\entry
+{2001 \ding{224} 2007}
+{Travail de fin d'études}
+{Saint-Quentin-en-Yvelines, France}
+{\vspace{0.2cm}\emph{HP CDS}  \markedright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
+Centre de compétences ERP chez Access-Commerce à Toulouse Labège.
+En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai, entre autres, effectué les
+missions suivantes :
+\begin{enumerate}
+\item Installation et administration de serveur Oracle sur systèmes Windows et Unix
+\item Développement de portail de vente en ligne pour la société Pages Jaunes
+\item Développements et adaptations diverses de l’ERP OCTAL basé sur `Oracle Forms Designer`
+\end{enumerate}
+}
+%------------------------------------------------
+\end{entrylist}
+
+%----------------------------------------------------------------------------------------
+%	Section FORMATION
+%----------------------------------------------------------------------------------------
+
+\section{formation}
+
+\begin{entrylist}
+%------------------------------------------------
+\entry
+{2006}
+{Certification Oracle {\normalfont 10g Associate}}
+{Oracle, Paris}
+{}
+%------------------------------------------------
+\entry
+{2016-2018}
+{Diplôme Universitaire {\normalfont Nouvelles technologies}}
+{Centre Professionnel du nord vaudois, Sainte-Croix, Suisse}
+{Année de spécialisation Internet et nouvelles technologies}
+%------------------------------------------------
+\entry
+{2012-2016}
+{Certificat Fédéral de Capacité d'Informaticien {\normalfont Option généraliste}}
+{Ecole Technique Ecole de Métiers de Lausanne, Lausanne, Suisse}
+{}
+%------------------------------------------------
+\entry
+{2009-2012}
+{Certificat d'études obligatoires {\normalfont Voie Secondaire Générale}}
+{Collège Arnold Reymond, Pully, Suisse}
+{}
+%------------------------------------------------
+\end{entrylist}
+
+%----------------------------------------------------------------------------------------
+%	Section COMPETENCES
+%----------------------------------------------------------------------------------------
+
+\section{compétences}
+
+\begin{capabilitize}
+	\capability {Anglais}
+		{Niveau B2}
+  	\capability {Allemand}
+		{Niveau A1}
+	\capability {Windows Server}
+	\capability {VMware ESXI / Hpe SImplivity / Dell VXRail}
+	\capability {Agile, ITIL}
+	\capability {Oracle, MySQL}
+	\capability {GNU/Linux}
+\end{capabilitize}
+
+%----------------------------------------------------------------------------------------
+%	Section INTERETS
+%----------------------------------------------------------------------------------------
+
+\section{divers \& centres d’intérêt}
+
+Détenteur d’un \textbf{permis B}
+
+\textbf{Aeromodèlisme} travail en équipe, ténacité
+
+\textbf{Escalade} Membre de l'assocaition d'escalade situé à B'UP Clermont-Ferrand
+
+\end{document}
