feat(cto): update cto cv

--- a/common/personal-infos.tex
+++ b/common/personal-infos.tex
@@ -1,7 +1,6 @@
 \newcommand*{\myAddress}{
-APT 6\\
-282 Avenue Antoine-de-Saint-Exupéry\\
-31400 TOULOUSE\\
+14 rue Maryse Bastié\\
+31130 Fonsegrives\\
 France
 }
 
@@ -16,4 +15,5 @@ anglais \textit{lu, écrit, parlé}
 \href{mailto:marthym@gmail.com}{marthym@gmail.com}
 \href{https://github.com/Marthym}{github.com/Marthym}
 \href{https://www.linkedin.com/in/combesfrederic}{in/combesfrederic}
+\href{https://blog.ght1pc9kc.fr/}{blog.ght1pc9kc.fr}
 }
