--- a/chief-technical-officer/main.tex
+++ b/chief-technical-officer/main.tex
@@ -42,6 +42,7 @@
 \myAddress
 ~
 \myPhoneNumber
+~
 \myReferences
 \section{langues}
 \myLanguages
@@ -58,10 +59,34 @@ Bagage Technique
 %----------------------------------------------------------------------------------------
 \section{expériences professionnelles}
 
+% Résumé à retoucher
+CTO innovant avec plus de \textbf{5 ans d'expérience} dans la direction des équipes techniques et de la mise en œuvre de 
+technologies et de solutions de pointe. Habile à \textbf{recruter et à gérer des équipes performantes}. 
+Habitué à travailler dans des environnements à \textbf{forte contraintes de sécurité}.
+Je cherche à mettre à profit mon expertise et mon expérience au service de nouveaux challenges.
+
 \begin{entrylist}
+%---- BOTdesign --------------------------------------------------------------------
+\entry
+{Depuis 2022}
+{Chief Technical Officer}
+{Toulouse}
+{\vspace{-0.2cm}\emph{BOTdesign} \discretright{/ Management, Organisation, Agilité, Dispositif Médical, NodeJS, Java, Spring, Cloud /}\\
+
+En tant que CTO chez BOTdesign, j’ai eu la charge de \textbf{restructurer l’équipe de développement} et de redonner au dispositif médical HEKO une nouvelle
+dimension produit. Avec une équipe technique de 5 personnes, j'ai établi une \textbf{roadmap solide et réaliste} pour répondre aux besoins fonctionnels et techniques
+de clients.
+
+Ma capacité à \textbf{mener des équipes} et à donner une direction m’a permis de recruter une équipe bienveillante et soudée capable d’assumer des projets de
+refonte importants aussi bien que la maintenance quotidienne de toute la plateforme.
+
+En tant que membre de la direction, je participe et oriente les \textbf{décisions stratégiques} prises pendant le comité de direction de la société.
+\\
+}
+
 %---- i-RUN.FR --------------------------------------------------------------------
 \entry
-{Depuis 2018}
+{2018 \ding{224} 2022}
 {CTO Adjoint}
 {Toulouse, Launaguet}
 {\vspace{-0.2cm}\emph{i-Run.fr} \discretright{/ Management, Organisation, Agilité, Background Technique /}\\
@@ -69,12 +94,14 @@ Bagage Technique
 En 4 ans chez i-Run.fr j’ai eu l’opportunité d’évoluer sur trois niveaux d’encadrement d’équipes et ainsi d’affiner mes \textbf{compétences en management et mon leadership}.
 \begin{description}[leftmargin=0cm]
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
-    La société me confie l’ensemble des équipes du service informatique, composé alors de \textbf{4~équipes et de 20 personnes} réparties en développeurs, consultants fonctionnels, administrateurs système et data scientist. Ma mission première a été de structurer les équipes afin de faciliter et fluidifier les communications entre elles. En lien direct avec la direction générale de la société, j’\textbf{élabore la stratégie informatique} pour l’ensemble des sites commerciaux de l’entreprise ainsi que pour le backoffice développé en interne. Je \textbf{prends les décisions adaptées} à la stratégie de la société \textbf{en pleine autonomie et supervise les équipes} du service dans la réalisation des projets.\\
-    J’ai à c\oe{ur} de transmettre à mes équipes des valeurs de \textbf{bienveillance et de coopération} qui ont amené le service à la \textbf{réalisation de projets majeurs} comme le déplacement de notre production de Paris à Toulouse, la restructuration de tout notre réseau informatique logistique ou l’expansion de la société en Allemagne.
+    En tant qu’adjoint du DSI, je manage et coordonne \textbf{20 personnes dans 4 équipes}. De l’équipe fonctionnelle qui recueille le besoin,
+    jusqu’aux SRE qui déploient et sécurisent les applications.
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
-    La société me fait confiance et me nomme au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. Je \textbf{supervise l’ensemble des choix techniques}. J’organise le fonctionnement de l’équipe via des rituels agiles sur une base Kanban. Je fais le \textbf{lien avec les équipes} "fonctionnel" et "système" afin de coordonner au mieux les efforts de chacun. De plus, \textbf{je recrute de nouveaux développeurs} nécessaires au renforcement de l’équipe.
+    La société me fait confiance et me nomme au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. 
+    Je \textbf{supervise l’ensemble des choix techniques}.
     \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018}\\
-    Arrivé dans une équipe alors composée de 5 développeurs, mes premières missions sont, avec l’aide du Lead Frontend, de proposer \textbf{une stratégie et une architecture logicielle cohérente}. La mise en place de \textbf{process} et de \textbf{bonnes pratiques} permet à l’équipe de réduire les régressions. J’établis également des \textbf{plans de formations} qui amènent l’équipe à progresser et à envisager plus sereinement les changements à venir.
+    En tant que Tech Lead Backend, je travaille avec mon homologue Frontend afin de proposer une stratégie et une architecture logicielle cohérente
+    pour les futurs produits de la société.
 \end{description}
 \
 }
