feat(techlead): Update tech lead CV

--- a/java-tech-leader/cv-tech-lead-fred-combes.tex
+++ b/java-tech-leader/cv-tech-lead-fred-combes.tex
@@ -39,9 +39,9 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{compétences}
-Java 11, Spring Boot,
+Java 21, Spring Boot,
 Maven, Git, Docker,
-MySQL, Mongo,
+MySQL, Mongo, Postgres
 Agile, Scrum,
 Linux
 \section{contact}
@@ -59,21 +59,48 @@ Linux
 \section{expériences professionnelles}
 
 \begin{entrylist}
+%---- BOTdesign --------------------------------------------------------------------
+\entry
+{Depuis 2022}
+{CTO Hands-On}
+{Toulouse}
+{\vspace{-0.2cm}\emph{BOTdesign} \markedright{/ Management, Organisation, NodeJS, Java, Spring, MongoDB, Ansible /}\\
+
+En tant que CTO hands-on chez BOTdesign, j’ai eu l’occasion de \textbf{mener l’équipe technique} au travers de la modernisation et du développement 
+d'une application dispositif médical.
+
+J’ai eu l’occasion de travailler sur des projets divers comme :
+\begin{enumerate}
+    \item Automatisation du \textbf{déploiement et sécurisation des infrastructures} Azure
+    \item Architecture et implémentation d’un \textbf{refactor de l’application} (NodeJS vers Java 21 / Spring)
+    \item Implémentation et déploiement d’un système de BI (Metabase / Postgres)
+    \item Mise en place de processus agile et structuration de l’équipe technique
+\end{enumerate}
+
+\
+}
+
 %---- I-RUN.FR --------------------------------------------------------------------
 \entry
-{Depuis 2018}
+{2018 \ding{224} 2022}
 {Technical Leader Backend}
 {Toulouse, Launaguet}
 {\vspace{-0.4cm}\emph{i-Run.fr} \markedright{/ Spring Boot, Java 11, Vue.js, Docker, Linux, MySQL, Agile /}\\
 \begin{description}[leftmargin=0cm]
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
-    Je supervise alors l’équipe \textbf{d’administrateurs système} en plus des équipes de développement. Je participe aux développements \textbf{Java 11},valide \textbf{l’architecte logicielle} du projet de refonte et organise la mise en place du monitoring des applications grâce à \textbf{Prometheus et Grafana}. Le remplacement de machines de production par des \textbf{VM sous Proxmox} et la segmentation du \textbf{réseau en VLANs}, ont permis de sécuriser la production et de préparer l’infrastructure pour les nouvelles applications. 
+        Je participe aux développements \textbf{Java 11},valide \textbf{l’architecte logicielle} du projet de refonte et organise la mise en place 
+        du monitoring des applications grâce à \textbf{Prometheus et Grafana}. Je mets en place un plan de migrations afin de moderniser et sécuriser
+        les infrastructures matérielles. 
 
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
-    J’ai initié et porté le projet de refonte et ré-architecture logicielle des applications. J’ai formé les équipes à \textbf{Java 11, Reactor et Spring Weblux} pour développer de nouveaux composants. J’ai porté les concepts d’\textbf{architecture hexagonale} auprès des équipes de développement. J’ai de plus développé des outils à base de \textbf{Docker, d’ansible ou de bash} pour faciliter les développements.
+        J’ai initié et porté le projet de refonte et ré-architecture logicielle des applications. J’ai formé les équipes 
+        à \textbf{Java 11, Reactor et Spring Weblux} pour développer de nouveaux composants. 
+        J’ai porté les concepts d’\textbf{architecture hexagonale} auprès des équipes de développement.
 
     \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018}\\
-    Ma première tache fut de sécuriser le système de déploiement. J’ai \textbf{uniformisé et automatisé les builds} de tous les projets et développé un CI dans gitlab qui permet aujourd’hui de déployer l'ensemble des applications en un click. En parallèle, je participe aux développements et à la maintenance des applications \textbf{Java 8}. 
+        Ma première tache fut de sécuriser le système de déploiement. J’ai \textbf{uniformisé et automatisé les builds} de tous les projets 
+        et développé un CI dans gitlab qui permet aujourd’hui de déployer l'ensemble des applications en un click. En parallèle, 
+        je participe aux développements et à la maintenance des applications \textbf{Java 8}. 
 \end{description}
 \
 }
@@ -83,8 +110,8 @@ Linux
 {2014 \ding{224} 2017}
 {Expert développement Java}
 {Toulouse, Basso Cambo}
-{\vspace{-0.4cm}\emph{Expert développement Java} \markedright{/ Java 8, Neo4j, Maven, Docker, Scrum /}\\
-\begin{enumerate}[leftmargin=-1cm]
+{\vspace{-0.4cm}\emph{Living Objects} \markedright{/ Java 8, Neo4j, Maven, Docker, Scrum /}\\
+\begin{enumerate}[leftmargin=0cm]
     \item Membre d’une équipe d’une \textbf{quinzaine de développeurs}, je travaille sur le produit principal de la société.
     \item Je participe à l’élaboration de l’\textbf{architecture micro-service REST} du produit.
     \item Je développe un composant logiciel en \textbf{Java 8}, sur un \textbf{framework OSGi} pour le serveur REST. 
@@ -100,11 +127,10 @@ Linux
 {Consultant Technique Expert}
 {Toulouse, Labège}
 {\vspace{-0.4cm}\emph{Cameleon Software} \markedright{/ Java J2EE, Struts, Jenkins, VMWare, Oracle /}\\
-\begin{enumerate}[leftmargin=-1cm]
-\item Intégré comme expert dans des \textbf{équipes de 10 à 20 personnes}, je développe des \textbf{composants d’interface responsive en JSP} et je forme les équipes à l’intégration de solution e-Commerce pour de grosses compagnies d’assurance comme MNT ou MMA.
-\item Réalisation de PoC techniques, pour des clients comme AXA, MMA, SAGE ou encore La Poste.
-\item \textbf{Missions à l’étranger} pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal.
-\item Mise en place et maintenance de \textbf{l’intégration continue} au sein de l’équipe technique de Caméléon (déploiement d’un serveur Git, VMWare et Jenkins).
+\begin{enumerate}[leftmargin=-0cm]
+    \item Expert dans des \textbf{équipes de 10 à 20 personnes}, je développe des \textbf{composants d’interface responsive en JSP} et 
+        je forme les équipes à l’intégration de solution e-Commerce pour de grosses compagnies d’assurance comme MNT, MMA ou AXA.
+    \item \textbf{Missions à l’étranger} pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal.
 \end{enumerate}
 \
 }
@@ -116,14 +142,9 @@ Linux
 {Développeur d'adaptations}
 {Toulouse, Labège}
 {\vspace{0.2cm}\emph{Access-Commerce}  \markedright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
-Centre de compétences ERP chez Access-Commerce à Toulouse Labège.
-En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai, entre autres, effectué les
-missions suivantes :
-\begin{enumerate}
-\item Installation et administration de serveur Oracle sur systèmes Windows et Unix
-\item Développement de portail de vente en ligne pour la société Pages Jaunes
-\item Développements et adaptations diverses de l’ERP OCTAL basé sur `Oracle Forms Designer`
-\end{enumerate}
+En tant que ressource technique d’une équipe de sept personnes, j’ai, entre autres, effectué les
+missions suivantes : Installation et administration de serveur Oracle, développement de portail de vente en ligne, 
+Développements et adaptations diverses grâce aux technologies Oracle.
 }
 %------------------------------------------------
 \end{entrylist}
@@ -167,13 +188,13 @@ missions suivantes :
 %----------------------------------------------------------------------------------------
 
 \section{compétences}
-
+\vspace{-0.4cm}
 \begin{capabilitize}
 	\capability {Anglais}
 		{Lu, écrit et parlé}
 		{Utilisé lors de mes déplacements aux USA et durant les réunions de cadrage avec les clients
 		étrangers.}
-	\capability {Java 11 / Maven}
+	\capability {Java 21 / Maven}
 		{Expert}
 		{Langage de programmation principal des applications éditées par Caméléon Software, Living Objects \& I-Run.fr}
 	\capability {Spring / Spring boot}
@@ -181,13 +202,13 @@ missions suivantes :
 		{Framework principal des application chez I-Run.fr}
 	\capability {Angular / Vue.js}
 		{Connaissance}
-		{Framework front utilisé chez I-Run.fr}
+		{Framework front utilisé chez i-Run.fr et BOTdesign}
 	\capability {Agile, Scrum}
 		{Maîtrise}
-		{Méthodologie utilisée avec souplesse chez Living Objects afin de s’organiser sur le projet EYE.lo}
-	\capability {Oracle, MySQL}
+		{Méthodologie utilisée avec souplesse chez Living Objects et mis en place chez i-Run.fr et BOTdesign}
+	\capability {Oracle, MySQL, MongoDB}
 		{Expert}
-		{Certification OCA 10g, MySQL est la base de données utilisé chez Living Objects}
+		{Certification OCA 10g, MySQL comme base de données principale chez Living Objects et i-Run.fr, MongoDB comme base de données principale chez BOTdesign}
 	\capability {Linux}
 		{Expert}
 		{Unique système d’exploitation utilisé chez Cameleon Software \& Living Objects}
@@ -198,11 +219,12 @@ missions suivantes :
 %----------------------------------------------------------------------------------------
 
 \section{divers \& centres d’intérêt}
-
-Détenteur d’un \textbf{permis B}
-
-\textbf{professionnel:} travail en équipe, challenges techniques, algorithmique, TDD
-
-\textbf{personnel:} Membre du bureau de l’association sportive de Volley de Montaudran, VLAM.
+\vspace{-0.4cm}
+\begin{enumerate}
+    \item Détenteur d’un \textbf{permis B}
+    \item \textbf{Professeur vacataire} à l’IUT Informatique de Toulouse
+    \item \textbf{professionnel:} travail en équipe, challenges techniques, algorithmique, TDD
+    \item \textbf{personnel:} Membre du bureau de l’association sportive de Volley de Montaudran, VLAM.
+\end{enumerate}
 
 \end{document}
