fix(cto): improve CTO CV

--- a/chief-technical-officer/main.tex
+++ b/chief-technical-officer/main.tex
@@ -177,34 +177,30 @@ En tant qu’unique ressource technique d’une équipe de 7 personnes, j’effe
 %----------------------------------------------------------------------------------------
 
 \section{compétences}
-
+\vspace{-0.4cm}
 \begin{capabilitize}
 	\capability {Anglais}
 		{Lu, écrit et parlé}
 		{Utilisé lors de mes déplacements aux USA et durant les réunions de cadrage avec les clients
 		étrangers.}
-    \capability {Management \& Leadership}
-		{}
-		{Création, structuration et management direct de 4 équipes et 20 personnes chez i-Run.fr}
-    \capability {Agile, Scrum, Kanban}
-		{}
-		{Méthodologie utilisée avec souplesse chez Living Objects. Mise en place de rituels chez i-Run.fr}
-    \capability {Pilotage de projets \& Organisation}
-		{}
-		{Nombreux projets pilotés ou supervisés sur l’ensemble des équipes chez i-Run.fr}
-    \capability {Recrutement}
-		{}
-		{Chargé des recrutements informatiques chez i-Run.fr, pour faire passer l’équipe de 6 à 20 personnes}
-    \capability {Pédagogie}
-        {}
-        {Formations à l’équipe de développement chez i-Run.fr et animations d’ateliers hebdomadaires de partage de connaissances}
-    \capability {Bienveillance \& écoute}
-		{}
-		{Mise en place de rituels de communication entre les membres du service chez i-Run.fr pour favoriser le dialogue 
-        et l’épanouissement des membres de l’équipe}
-    \capability {Bagage Technique}
+	\capability {Java 21 / Maven}
 		{Expert}
-		{Compétences Java, Spring, MySQL, Angular, Vue.js, Linux\dots\ exploités tout au long de ma carrière}
+		{Langage de programmation principal des applications éditées par Caméléon Software, Living Objects \& I-Run.fr}
+	\capability {Spring / Spring boot}
+		{Expert}
+		{Framework principal des application chez I-Run.fr}
+	\capability {Angular / Vue.js}
+		{Connaissance}
+		{Framework front utilisé chez i-Run.fr et BOTdesign}
+	\capability {Agile, Scrum}
+		{Maîtrise}
+		{Méthodologie utilisée avec souplesse chez Living Objects et mis en place chez i-Run.fr et BOTdesign}
+	\capability {Oracle, MySQL, MongoDB}
+		{Expert}
+		{Certification OCA 10g, MySQL comme base de données principale chez Living Objects et i-Run.fr, MongoDB comme base de données principale chez BOTdesign}
+	\capability {Linux}
+		{Expert}
+		{Unique système d’exploitation utilisé chez Cameleon Software \& Living Objects}
 \end{capabilitize}
 
 %----------------------------------------------------------------------------------------
@@ -212,11 +208,11 @@ En tant qu’unique ressource technique d’une équipe de 7 personnes, j’effe
 %----------------------------------------------------------------------------------------
 
 \section{divers \& centres d’intérêt}
-
-Détenteur d’un \textbf{permis B}
-
-\textbf{Professionnel} : Travail en équipe, challenges techniques, Software Craftsmanship, Brown Bag Lunch.
-
-\textbf{Personnel} : Membre du bureau de l’association sportive VLAM (Volley-Ball).
-
+\vspace{-0.4cm}
+\begin{enumerate}
+    \item Détenteur d’un \textbf{permis B}
+    \item \textbf{Professeur vacataire} à l’IUT Informatique de Toulouse
+    \item \textbf{professionnel:} travail en équipe, challenges techniques, algorithmique, TDD
+    \item \textbf{personnel:} Membre du bureau de l’association sportive de Volley de Montaudran, VLAM.
+\end{enumerate}
 \end{document}
